# theoryParallelism

task0/: CMakeLists.txt  README.md  doubleAndFloat.cpp
task2/1/: main.cpp
task2/2/: main.cpp
task2/3/: CMakeLists.txt  main.cpp
